<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ExpeseTracker</groupId>
	<artifactId>ExpeseTracker</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>ExpeseTracker</name>
	<url>http://maven.apache.org</url>
	

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<server.hostname>127.0.0.1</server.hostname>
		<server.port>8080</server.port>
		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
		<doxygen.config.file>${basedir}/src/main/resources/Doxyfile</doxygen.config.file> 
	</properties>

	<!-- search for the latest version of dependencies in http://mvnrepository.com -->
	<dependencies>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-core</artifactId>
			<version>[5.1.6, 5.9)</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-api-jdo</artifactId>
			<version>[5.1.4, 5.9)</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-rdbms</artifactId>
			<version>[5.1.6, 5.9)</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>javax.jdo</artifactId>
			<version>[3.2.0-m8, )</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.22</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>2.29</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>2.29</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
			<version>2.29</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.29</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>2.29</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
   			<groupId>org.mockito</groupId>
   			<artifactId>mockito-core</artifactId>
   			<version>3.2.4</version>
  			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>[1.2.17, )</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-console-standalone</artifactId>
			<version>1.8.0-M1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.25</version>
		</dependency>	
		<!-- <dependency>
            <groupId>org.databene</groupId>
            <artifactId>contiperf</artifactId>
            <version>2.3.4</version>
            <scope>test</scope>
        </dependency> -->
        
        <!-- https://mvnrepository.com/artifact/com.github.javatlacati/contiperf -->
		<dependency>
   		<groupId>com.github.javatlacati</groupId>
    		<artifactId>contiperf</artifactId>
    		<version>2.4.3</version>
		</dependency>
     
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-site-plugin</artifactId>
			<version>3.9.1</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>3.0.0-M5</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.datanucleus</groupId>
				<artifactId>datanucleus-maven-plugin</artifactId>
				<version>5.2.1</version>
				<configuration>
					<log4jConfiguration>${config.files.dir}/log4j.properties</log4jConfiguration>
					<verbose>true</verbose>
					<fork>false</fork>
                    <props>${config.files.dir}/datanucleus.properties</props>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>enhance</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.90</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			
			
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.4.19.v20190610</version>
            </plugin>
		
			<!--<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
    				<forkCount>3</forkCount>
    				<reuseForks>true</reuseForks>
					<argLine>@{argLine} -more -arguments</argLine>
    				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
  				</configuration>
			</plugin>-->
			
			<!--
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.2</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin> -->
			<plugin>
		        <groupId>com.soebes.maven.plugins</groupId>
		        <artifactId>doxygen-maven-plugin</artifactId>
		        <version>1.1.0</version>
		        <configuration>
		        	<configurationFile>${doxygen.config.file}</configurationFile>
		        </configuration>
		     </plugin>


			 <plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
				  <execution>
					<id>copy-resources</id>
					<!-- here the phase you need -->
					<phase>validate</phase>
					<goals>
					  <goal>copy-resources</goal>
					</goals>
					<configuration>
					  <outputDirectory>${basedir}/docs/jacoco</outputDirectory>
					  <resources>          
						<resource>
						  <directory>${basedir}/target/site/jacoco</directory>
						  <filtering>true</filtering>
						</resource>
					  </resources> 
					  <outputDirectory>${basedir}/docs/contiperf</outputDirectory>
					  <resources>          
						<resource>
						  <directory>${basedir}/target/contiperf-report</directory>
						  <filtering>true</filtering>
						</resource>
					  </resources>

					</configuration>            
				  </execution>
				</executions>
			  </plugin>
			
		 </plugins>
	</build>

	<profiles>
		<!-- run as 'mvn exec:java -Pclient' -->
		<profile>
			<id>client</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<configuration>
							<mainClass>es.deusto.client.ExampleClient</mainClass>
							<arguments>
								<argument>${server.hostname}</argument>
								<argument>${server.port}</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>DN_M2_Repo</id>
			<name>DataNucleus Repository</name>
			<url>http://www.datanucleus.org/downloads/maven2</url>
			
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>DataNucleus_2</id>
			<url>http://www.datanucleus.org/downloads/maven2/</url>
		</pluginRepository>
	</pluginRepositories>
	<reporting>
		<plugins>
	 		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
					<source>8</source>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.21.0</version>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-overview-plugin</groupId>
				<artifactId>maven-overview-plugin</artifactId>
				<version>1.6</version>
			</plugin>
		   <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.11.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
		   
         </plugins>
	 </reporting> 
</project>
